# AI-VIDEO

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  TODOS.md  pyproject.toml
.agent/context/: session-handoff.md
.codex/: config.toml
.workflow/active/WFS-ai-video-frontend/: workflow-session.json
.workflow/active/WFS-video-quality-crossroads/: workflow-session.json
configs/: example.project.yaml  example.shots.yaml  wan22.project.yaml  wan22.shots.yaml  wan22_fast.project.yaml  wan22_quick.shots.yaml
docs/: agent-primary-contract-matrix.md
docs/superpowers/plans/: 2026-05-01-local-long-video-iteration-2.md  2026-05-01-local-long-video-mvp.md  2026-05-02-ai-video-frontend.md  2026-05-02-frontend-core-loop.md  (+2 more)
src/ai_video/: cli.py  comfy_client.py  config.py  errors.py  ffmpeg_tools.py  manifest.py  models.py  pipeline.py  workflow_loader.py  workflow_renderer.py
src/ai_video_mcp/: __init__.py  __main__.py  cache.py  config.py  errors.py  server.py
tests/: conftest.py  test_cli.py  test_comfy_client.py  test_config.py  test_errors.py  test_ffmpeg_tools.py  test_manifest.py  test_mcp_analyze.py  test_mcp_apply_optimization.py  test_mcp_frames.py  test_mcp_optimize_plan.py  test_mcp_probe.py  test_mcp_review.py  test_mcp_scene_detect.py  test_mcp_transcribe.py  test_pipeline.py  test_resume_e2e.py  test_workflow_loader.py  test_workflow_renderer.py
tests/fixtures/: wan22_i2v_ui.json
workflows/bindings/: example_i2v_binding.yaml  wan22_i2v_binding.yaml
workflows/templates/: example_i2v_api.json  wan22_i2v_api.json  wan22_i2v_ui.json
(+68 files in other folders)
